RESOLVED FIXED116766
REGRESSION: WebProcess is terminated when all Safari windows are closed.
https://bugs.webkit.org/show_bug.cgi?id=116766
Summary REGRESSION: WebProcess is terminated when all Safari windows are closed.
Andreas Kling
Reported 2013-05-25 14:25:32 PDT
Attachments
Patch (1.50 KB, patch)
2013-05-25 14:27 PDT, Andreas Kling
ap: review+
Andreas Kling
Comment 1 2013-05-25 14:27:21 PDT
Alexey Proskuryakov
Comment 2 2013-05-25 14:29:43 PDT
Comment on attachment 202892 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202892&action=review > Source/WebKit2/UIProcess/WebProcessProxy.cpp:204 > + // We only allow this when using a network process, as otherwise the WebProcess needs to clean up its session state. s/clean up/preserve/
Andreas Kling
Comment 3 2013-05-25 14:34:20 PDT
Note You need to log in before you can comment on or make changes to this bug.